@@ -516,6 +516,11 @@ std::string get_stream_url(sqlite3* instance, union channelid channelid);
 // Gets the number of timers in the database
 int get_timer_count(sqlite3* instance, int maxdays);
 
+// get_tuner_count
+//
+// Gets the number of tuner devices listed in the database
+int get_tuner_count(sqlite3* instance);
+
 // get_tuner_direct_channel_flag
 //
 // Gets a flag indicating if a channel can only be streamed directly from a tuner device
